# lmgc90_installation

./: .gitignore  BOOTSTRAP_vs_SPACK_comparison.md  CMakeLists.txt  README.md  README_FOR_DEV.md  README_PYTHON.md  README_SIMPLE_INSTALL.md  RIP_README  environment.yml  environment_arm64.yml  finalize_conda_env.bat  install_lmgc90_simple.sh  install_lmgc90_spack.sh
examples/: CMakeLists.txt  README.md
examples/Ateliers/GazGrains/: ParticlesToMesh.py  command.py  gen_sample.py
examples/Ateliers/Performance/: .buildinfo  README.txt
examples/Ateliers/gmshpy/: gmshpy-basics.ipynb  gmshutils.ipynb
examples/Pre/: CMakeLists.txt
examples/Pre/prepro_grains/: CMakeLists.txt
examples/Pre/prepro_mesh2D/: CMakeLists.txt
examples/Pre/prepro_mesh3D/: CMakeLists.txt
examples/Pre/wall2D/: CMakeLists.txt
examples/Pre/wall3D/: CMakeLists.txt
examples/RIGID_2D/: CMakeLists.txt
examples/RIGID_2D/1024DK_BoxJC/: CMakeLists.txt
examples/RIGID_2D/1024DK_BoxJC_ElectricalConduction/: CMakeLists.txt
examples/RIGID_2D/1024DK_BoxJC_ThermalConduction/: CMakeLists.txt  command.py  command_for_dummies.py
examples/RIGID_2D/1DK_BoxJC/: CMakeLists.txt
examples/RIGID_2D/200DK_BoxJC_MD/: CMakeLists.txt  command.py
examples/RIGID_2D/4POLYG_SHEAR_CYCLE_CZM/: CMakeLists.txt  command.py  cycles_tanh.py  traitement.py
examples/RIGID_2D/500PL_PerioBoxJC/: CMakeLists.txt  command.py
examples/RIGID_2D/BouncingBallsDK/: CMakeLists.txt
examples/RIGID_2D/BridgePL_GroundJC/: CMakeLists.txt  command.py
examples/RIGID_2D/DISKx_Vther/: CMakeLists.txt  command.py  gen_sample.py
examples/RIGID_2D/Drum_THERMORIGID/: CMakeLists.txt  command.py  gen_drum.py
examples/RIGID_2D/MembraneBiaxialDK/: CMakeLists.txt  README.md
examples/RIGID_2D/POLYG_Vther/: CMakeLists.txt
examples/RIGID_2D/SourcePointPL_BoxJC/: CMakeLists.txt
examples/RIGID_2D/ViscoElasticRepell_BouncingBall/: CMakeLists.txt  command.py  gen_sample.py
examples/RIGID_2D/WallPL_GroundJC/: CMakeLists.txt
examples/RIGID_2D/arche_plein_ceintre_2D/: CMakeLists.txt  README.rst  command.py  gen_sample.py
examples/RIGID_2D/arche_shrink/: CMakeLists.txt  gen_sample.py
examples/RIGID_2D/basic_NARD/: CMakeLists.txt
examples/RIGID_2D/clusterDKPL_GroundJC/: CMakeLists.txt
examples/RIGID_2D/couette/: command.py  gen_sample.py
examples/RIGID_2D/poteau_shrink/: CMakeLists.txt  command.py
examples/RIGID_2D/siloDK_hoperJC/: CMakeLists.txt
examples/RIGID_3D/: CMakeLists.txt
examples/RIGID_3D/100_PR_PerioBox/: CMakeLists.txt  command.py
examples/RIGID_3D/1SP_BoxPL/: CMakeLists.txt
examples/RIGID_3D/1SP_PL/: CMakeLists.txt  command.py
examples/RIGID_3D/1SP_PR/: CMakeLists.txt  command.py
examples/RIGID_3D/1_ClusterSP_2_PL/: CMakeLists.txt
examples/RIGID_3D/1_PR_Box_ClusterPL/: CMakeLists.txt  command.py
examples/RIGID_3D/1_SP_Box_ClusterPL/: CMakeLists.txt  gen_sample.py
examples/RIGID_3D/2_ClusterCD_1_PL/: CMakeLists.txt  command.py  gen_sample.py
examples/RIGID_3D/2_PR_TH_CZM/: CMakeLists.txt  command-Pprogressif.py  gen_sample_I.py  gen_sample_II.py  gen_sample_mixte.py  post_FvsU_I.py  post_FvsU_II.py  post_FvsU_mixte.py
examples/RIGID_3D/3_briques/: CMakeLists.txt  README.rst
examples/RIGID_3D/945_SP_Box_PL/: CMakeLists.txt  command.py
examples/RIGID_3D/945_SP_PerioBox/: CMakeLists.txt
examples/RIGID_3D/Aqueduc_PR/: CMakeLists.txt  command.py
examples/RIGID_3D/Beam_ClusterPR/: CMakeLists.txt
examples/RIGID_3D/Bridge_PR/: CMakeLists.txt  command.py
examples/RIGID_3D/CDCD_PerioBox/: CMakeLists.txt  gen.py  run.py
examples/RIGID_3D/Colonne_PR/: CMakeLists.txt  gen_sample.py  post_FvsU.py
examples/RIGID_3D/Depot_SPSP_perio/: CMakeLists.txt  command.py  command_DDM.py  gen_sample.py
examples/RIGID_3D/NonConvexBricks_ClusterPR/: CMakeLists.txt
examples/RIGID_3D/POLYF/: CMakeLists.txt
examples/RIGID_3D/PTPT3/: CMakeLists.txt  command.py  gen_sample.py
examples/RIGID_3D/SPPR_boxPL/: CMakeLists.txt  post.py
examples/RIGID_3D/SPPR_perio/: CMakeLists.txt  gen_sample.py
examples/RIGID_3D/ViscoElasticRepell_BouncingBall/: gen_sample.py
examples/RIGID_3D/Wall_PR/: CMakeLists.txt
examples/RIGID_3D/arche_plein_ceintre_3D/: CMakeLists.txt  README.rst  post.py
examples/RIGID_3D/donut/: CMakeLists.txt  command.py
examples/RIGID_3D/donut_skin/: CMakeLists.txt  command.py  gen_sample.py
examples/RIGID_3D/lego/: CMakeLists.txt  gen_sample.py  lego.msh
examples/RIGID_3D/thermal3D/: CMakeLists.txt
examples/Tutorials/: Readme.ipynb
examples/Tutorials/deformable/: deformable_computation.ipynb
examples/compas/: command.py  gen_dem_vault.py
examples/compas_example_project/: CMakeLists.txt  build.sh  tutorial.step  write_step.cpp
examples/mecaMAILx_2D/: CMakeLists.txt
examples/mecaMAILx_3D/: CMakeLists.txt
examples/mecaMAILx_RIGID_2D/: CMakeLists.txt
examples/mecaMAILx_RIGID_3D/: CMakeLists.txt
examples/poroMAILx_2D/: CMakeLists.txt
examples/poroMAILx_3D/: CMakeLists.txt
examples/therMAILx_1D/: CMakeLists.txt
examples/therMAILx_2D/: CMakeLists.txt
src/: CMakeLists.txt  CTestConfig.cmake  get_git_branch.cmake.in
src/Bindings/: CMakeLists.txt  Demmefi_ExternalModels.f90  MatLib_ExternalModels_v3.f90  MatLib_ExternalModels_v4.f90  Std_ExternalDetection.f90  Std_ExternalFEM.f90  Std_ExternalMBS.f90  Std_SparseLinearAlgebra.f90  User.f90  makefile  noMatLib_ExternalModels.f90
src/ChiPy/: CMakeLists.txt  Doxyfile_chipy.cfg.in  README  chipy.i.in  dummy_source.f90  mainpage.h  make_chipy_docstring.py  wrap_GGCxx.f90
src/Core/: CMakeLists.txt
src/Docs/: CMakeLists.txt  doxygen.cfg.in  makefile
src/Sandbox/: CMakeLists.txt
src/addons/: CMakeLists.txt  README  cleanlmgc  compactlmgc  gmshutils.py  mkdirlmgc  post.py  rev_2012.py  uncompactlmgc  update_gen_2016  update_lmgc90_commands.py
src/contribs/: CMakeLists.txt  Mumps_SparseLinearAlgebra.f90  PETSc_SparseLinearAlgebra.f90  README  UMFPack_SparseLinearAlgebra.f90  siconos.cmake
src/post/: __init__.py
src/pre/: README  __init__.py  bulk_behavs.py  models.py  postpro_commands.py  tact_behavs.py
(+9271 files in other folders)
