
set(dir_name RIGID_3D)

# quick
add_subdirectory( 1SP_BoxPL)
add_subdirectory( 1SP_PR )
add_subdirectory( 1_ClusterSP_2_PL )
add_subdirectory( 1_SP_Box_ClusterPL )
add_subdirectory( 2_ClusterCD_1_PL )
#add_subdirectory( 2_PR_TH_CZM )
add_subdirectory( 3_briques )
add_subdirectory( Beam_ClusterPR )
add_subdirectory( Bridge_PR )
add_subdirectory( CDCD_PerioBox )
add_subdirectory( PTPT3 )
add_subdirectory( ViscoElasticRepell_BouncingBall )
add_subdirectory( arche_plein_ceintre_3D )
add_subdirectory( donut )
add_subdirectory( donut_skin )
add_subdirectory( lego )

# just_run
add_subdirectory(100_PR_PerioBox)
add_subdirectory(1SP_PL)
#add_subdirectory(1_PR_Box_ClusterPL)
add_subdirectory(945_SP_Box_PL)
add_subdirectory(945_SP_PerioBox)
add_subdirectory(Aqueduc_PR)
add_subdirectory(Colonne_PR)
add_subdirectory(Depot_SPSP_perio)
add_subdirectory(NonConvexBricks_ClusterPR)
add_subdirectory(SPPR_boxPL)
add_subdirectory(SPPR_perio)
add_subdirectory(POLYF)
add_subdirectory(Wall_PR)
add_subdirectory(basic_NARD)
add_subdirectory(thermal3D)
